remakes/keyboard/style.css
* {
    /* the grid shape scales with changing the width */
    --normalwidth: 50px;
    /* but it does not when changing the margin */
    --normalmargin: calc(var(--normalwidth) / 15);
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    overflow-y: hidden;
    
    font-family: Helvetica, system-ui;
}

@media screen and (max-width: 970px) {
    /* while this scales, its very bad on mobile vertical, so i wont add it. its not a vertical keyboard on mobile.
    --normalwidth: 4.5vw; */

    body {
        width: max-content;
        padding-right: 30px;
    }
}

#content {
    width: min-content;
    height: min-content;
    background-color: black;
    padding: calc(var(--normalwidth) / 2);
    border-radius: calc(var(--normalwidth) / 10 + 10px);
    box-shadow: 10px 10px rgb(47, 47, 47), 20px 20px 40px black;
}

.row {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

/* keys */
.row > div {
    border: 2px solid grey;
    /* background-color: whitesmoke; */
    background-color: rgb(253, 246, 231);
    width: var(--normalwidth);
    height: var(--normalwidth);
    margin: var(--normalmargin);
    border-radius: calc(var(--normalwidth) / 10);
    box-shadow: 2px 2px whitesmoke;
    /* box-shadow: 2px 2px rgb(253, 246, 231); */

    display: flex;
    justify-content: center;
    align-items: center;
}
.row > div > p {
    text-align: center;
    font-size: medium;
}

div.row:not(.sysrow) > div:not(.onehalf, .two, .twohalf, .sys) > p {
    font-size: calc(var(--normalwidth) / 2) !important;
}

/* pushed keys */
.pushed {
    background-color: rgb(50, 50, 50) !important;
    color: white !important;
    border: 2px solid black !important;
    /* box-shadow:inset -1px -1px 1px black, inset 1px 1px 1px black !important; */
    box-shadow: none !important;
}

/* speific key types */
.onehalf {
    width: calc(var(--normalwidth) * 1.5 + var(--normalmargin) * 3) !important;
}

.two {
    width: calc(var(--normalwidth) * 2 - var(--normalmargin)) !important;
}

.twohalf {
    width: calc(var(--normalwidth) * 2.5 - var(--normalmargin) * 5) !important;
}

.sys {
    background-color: black !important;
    color: rgb(90, 90, 90) !important;
    border: none !important;
    box-shadow: none !important;
}

#Space {
    width: calc(var(--normalwidth) * 9 - var(--normalmargin) * 7 + 2px*14) !important;
}

/* output */
#output {
    position: absolute;
    top: 15vh;
    right: 50vw;
    width: 50%;
    color: rgb(70, 70, 70);

    /* ty kind sir: https://stackoverflow.com/a/69010726/12706133 */
    display: flex;
    justify-content: flex-end;
    white-space: nowrap;
    overflow: hidden;
}
#output-fadeout {
  content: "";
  position: absolute;
  z-index: 1;
  top: 15vh;
  background-image: linear-gradient(to left, rgba(255,255,255,0), rgba(255,255,255, 1) 90%);
  width: 50%;
  left: 0px;
  height: 4em;
}

